# disassembly-library

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  build.sh
.github/workflows/: macos-13.yml  macos-14.yml  main.yml  ubuntu-2004.yml  ubuntu-2204.yml  ubuntu-2404.yml
examples/: CMakeLists.txt  api_demo.c  api_demo.cpp  api_demo.py
include/: armdisasm.h
python/: .pylintrc  README.md  pyproject.toml
python/armdisasm/: __init__.py  armdisasm.py  disassembler.py  instruction.py
src/: CMakeLists.txt  armdisasm.c
src/llvm-project/llvm/include/llvm-c/: Disassembler.h  DisassemblerTypes.h
src/llvm-project/llvm/lib/MC/MCDisassembler/: Disassembler.cpp
test/: CMakeLists.txt  armdisasm_aarch64_test.cpp  disasm_examples.sh
