#
# SPDX-FileCopyrightText: Copyright (C) 2024 Arm Limited and/or its affiliates
# SPDX-FileCopyrightText: <open-source-office@arm.com>
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy
# of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations
# under the License.

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=59.0"]

[project]
authors = [
    {name="Arm Limited", email="open-source-office@arm.com"},
    {name="James Whitaker", email="james.whitaker@arm.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
description = "A Python package for the Arm Disassembly Library"
keywords = ["Arm, disassembly, library, instruction, decode, disassembler, aarch64"]
license = {file = "LICENSE"}
maintainers = [
    {name="James Whitaker", email="james.whitaker@arm.com"}
]
name = "armdisasm"
readme = "README.md"
requires-python = ">=3.7"
version = "0.1.0"

[project.urls]
Homepage = "https://github.com/ArmDeveloperEcosystem/disassembly-library"
Issues = "https://github.com/ArmDeveloperEcosystem/disassembly-library/issues"

[tool.setuptools]
py-modules = ['armdisasm']

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"armdisasm" = ["*.py", "libarmdisasm.so", "libarmdisasm.dylib"]
